remove email/discord references and replace with wallet. api fixes
